<resources>
    <string name="app_name">Inspection Check</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title">MNP Inspection</string>
    <string name="title1">Report</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="kembali">Kembali</string>
    <string name="email">Email</string>
    <string name="nip">NIP</string>
    <string name="log_out">Log Out</string>
    <string name="fast">Fast</string>
    <string name="smooth">Smooth</string>
    <string name="ots">On Time Service</string>
    <string name="inspeksi">Inspeksi</string>
    <string name="akun">Nama Petugas</string>
    <string name="kerusakan">Kerusakan</string>
</resources>